{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 478,
  "lineage": "2680df7b-b43a-e38a-4e66-8e2977ba4da8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef",
            "arn_suffix": "app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220604165010664200000005-1515576610.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220604165010664200000005",
            "security_groups": [
              "sg-0c5c6c4ab73e03010"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c2dc22263d9a772c"
              },
              {
                "subnet_id": "subnet-0d743230322e00295"
              }
            ],
            "subnets": [
              "subnet-0c2dc22263d9a772c",
              "subnet-0d743230322e00295"
            ],
            "vpc_id": "vpc-01c33cc238222ed1a",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_security_group.astro-app-alb-sg",
            "aws_subnet.astro-private-app-1",
            "aws_subnet.astro-private-app-2",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "web-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165018660900000006/6070bb38b17b418a",
            "arn_suffix": "app/tf-lb-20220604165018660900000006/6070bb38b17b418a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220604165018660900000006-153592642.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165018660900000006/6070bb38b17b418a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220604165018660900000006",
            "security_groups": [
              "sg-018d9247ded823115"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-072d69206e5818ddc"
              },
              {
                "subnet_id": "subnet-0bf7111affa1f414d"
              }
            ],
            "subnets": [
              "subnet-072d69206e5818ddc",
              "subnet-0bf7111affa1f414d"
            ],
            "vpc_id": "vpc-01c33cc238222ed1a",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_security_group.astro-web-alb-sg",
            "aws_subnet.astro-public-1",
            "aws_subnet.astro-public-2",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:listener/app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef/38f8cfdf7884535e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007145200000002/90f7534e515b22e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:listener/app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef/38f8cfdf7884535e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165010664200000005/63ddfd61ba5201ef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.app-alb",
            "aws_alb_target_group.app-target-group",
            "aws_internet_gateway.astro-main-gw",
            "aws_security_group.astro-app-alb-sg",
            "aws_subnet.astro-private-app-1",
            "aws_subnet.astro-private-app-2",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web-list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:listener/app/tf-lb-20220604165018660900000006/6070bb38b17b418a/49007cf48466a8f8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007141100000001/979af896f301f9e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:listener/app/tf-lb-20220604165018660900000006/6070bb38b17b418a/49007cf48466a8f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:loadbalancer/app/tf-lb-20220604165018660900000006/6070bb38b17b418a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.web-alb",
            "aws_alb_target_group.web-target-group",
            "aws_internet_gateway.astro-main-gw",
            "aws_security_group.astro-web-alb-sg",
            "aws_subnet.astro-public-1",
            "aws_subnet.astro-public-2",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007145200000002/90f7534e515b22e6",
            "arn_suffix": "targetgroup/tf-20220604165007145200000002/90f7534e515b22e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007145200000002/90f7534e515b22e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220604165007145200000002",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007141100000001/979af896f301f9e3",
            "arn_suffix": "targetgroup/tf-20220604165007141100000001/979af896f301f9e3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:182313674728:targetgroup/tf-20220604165007141100000001/979af896f301f9e3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220604165007141100000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "astro-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7e5933c0dbb85f7",
            "domain": "vpc",
            "id": "eipalloc-0a7e5933c0dbb85f7",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-215-110-237.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.110.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "astro-nat-eip"
            },
            "tags_all": {
              "Name": "astro-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "astro-main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:internet-gateway/igw-03b3e8102f9eced9d",
            "id": "igw-03b3e8102f9eced9d",
            "owner_id": "182313674728",
            "tags": {
              "Name": "astro-main-gw"
            },
            "tags_all": {
              "Name": "astro-main-gw"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "astro-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7e5933c0dbb85f7",
            "connectivity_type": "public",
            "id": "nat-0bff899cdda1d8e8a",
            "network_interface_id": "eni-0ce72dd8ca0f4a1b3",
            "private_ip": "10.5.1.107",
            "public_ip": "13.215.110.237",
            "subnet_id": "subnet-072d69206e5818ddc",
            "tags": {
              "Name": "astro-nat-gateway"
            },
            "tags_all": {
              "Name": "astro-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.astro-nat-eip",
            "aws_internet_gateway.astro-main-gw",
            "aws_subnet.astro-public-1",
            "aws_vpc.main",
            "aws_vpc_dhcp_options.dns_resolver",
            "aws_vpc_dhcp_options_association.dns_resolver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "astro-main-public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:route-table/rtb-007e67b49f38d7be1",
            "id": "rtb-007e67b49f38d7be1",
            "owner_id": "182313674728",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b3e8102f9eced9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "astro-main-public-rtb"
            },
            "tags_all": {
              "Name": "astro-main-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "astro-main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c93983396d13ea6",
            "route_table_id": "rtb-007e67b49f38d7be1",
            "subnet_id": "subnet-072d69206e5818ddc"
          },
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_route_table.astro-main-public-rtb",
            "aws_subnet.astro-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "astro-main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3c46abf927d65a8",
            "route_table_id": "rtb-007e67b49f38d7be1",
            "subnet_id": "subnet-0bf7111affa1f414d"
          },
          "dependencies": [
            "aws_internet_gateway.astro-main-gw",
            "aws_route_table.astro-main-public-rtb",
            "aws_subnet.astro-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "astro-app-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:security-group/sg-0c5c6c4ab73e03010",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5c6c4ab73e03010",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astro-app-alb-sg",
            "name_prefix": "",
            "owner_id": "182313674728",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "astro-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:security-group/sg-037e9510e8e3fa1fe",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037e9510e8e3fa1fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5c6c4ab73e03010"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astro-app-sg",
            "name_prefix": "",
            "owner_id": "182313674728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "astro-app-sg"
            },
            "tags_all": {
              "Name": "astro-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.astro-app-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "astro-mysql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:security-group/sg-0d0b813c10fa4e583",
            "description": "mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0d0b813c10fa4e583",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-037e9510e8e3fa1fe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "182313674728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "tags_all": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.astro-app-alb-sg",
            "aws_security_group.astro-app-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "astro-web-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:security-group/sg-018d9247ded823115",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018d9247ded823115",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astro-web-alb-sg",
            "name_prefix": "",
            "owner_id": "182313674728",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "astro-web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:security-group/sg-0d231c883defa4cb2",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d231c883defa4cb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018d9247ded823115"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astro-web-sg",
            "name_prefix": "",
            "owner_id": "182313674728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "astro-web-sg"
            },
            "tags_all": {
              "Name": "astro-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.astro-web-alb-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-private-app-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-0d743230322e00295",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d743230322e00295",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-private-app-1"
            },
            "tags_all": {
              "Name": "astro-private-app-1"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-private-app-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-0c2dc22263d9a772c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.5.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2dc22263d9a772c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-private-app-2"
            },
            "tags_all": {
              "Name": "astro-private-app-2"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-private-db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-0c167fe215b9c2fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c167fe215b9c2fc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-private-db-1"
            },
            "tags_all": {
              "Name": "astro-private-db-1"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-private-db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-0f1a816c790917204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.5.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1a816c790917204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-private-db-2"
            },
            "tags_all": {
              "Name": "astro-private-db-2"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-072d69206e5818ddc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d69206e5818ddc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-public-1"
            },
            "tags_all": {
              "Name": "astro-public-1"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "astro-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:subnet/subnet-0bf7111affa1f414d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7111affa1f414d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "182313674728",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astro-public-2"
            },
            "tags_all": {
              "Name": "astro-public-2"
            },
            "vpc_id": "vpc-01c33cc238222ed1a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:182313674728:vpc/vpc-01c33cc238222ed1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-038bdec80a96eade9",
            "default_route_table_id": "rtb-03cba76323a06cb23",
            "default_security_group_id": "sg-04ed05a294370dd50",
            "dhcp_options_id": "dopt-0df1de888f4a0cf12",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01c33cc238222ed1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cba76323a06cb23",
            "owner_id": "182313674728",
            "tags": {
              "Name": "astro-vpc"
            },
            "tags_all": {
              "Name": "astro-vpc"
            }
          }
        }
      ]
    }
  ]
}